[package]
name = "lsof"
version = "0.1.0"
edition = "2024"
description = "lsof-style process and socket inspection for Windows"
license = "MIT"
repository = "https://github.com/i-rocky/lsof"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
] }
